scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / f'@APP_ID@.svg',
  install_dir: get_option('datadir') / 'icons' / scalable_dir,
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'
install_data(
  symbolic_dir / f'@APP_ID@-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / symbolic_dir,
)
